--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,422 +1,3 @@
-.navbar {
-}
-
-.streifen {
-  left: -10%;
-  background: url(../images/microm_verlaufsstreifen.svg) no-repeat;
-  width: 120%;
-  height: 14px;
-  position: absolute;
-  bottom: -13px;
-  z-index: -1;
-  background-size: cover;
-}
-
-.navdesc {
-  display: block;
-  content: "";
-  width: 100%;
-  height: 60px;
-  background: transparent url(../images/claim-welle.svg) no-repeat;
-  background-color: transparent !important;
-  position: relative;
-  background-position-x: 91%;
-  background-position: 90.7% 14px;
-  box-sizing: border-box;
-}
-
-.header1 {
-  background-repeat: no-repeat;
-  background-repeat-x: no-repeat;
-  background-repeat-y: no-repeat;
-  background-image: url(../images/b1.png);
-  background-size: 100% 100%;
-  background-position: center center;
-  width: 100% !important;
-  height: 55rem !important;
-  opacity: 1;
-  visibility: inherit;
-  z-index: 20;
-}
-
-.grad {
-  width: 100% !important;
-  background-image: url(../images/bg_welle_content.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 170px;
-  padding-bottom: 100px;
-  margin-bottom: 0em;
-}
-
-.welt1 {
-  z-index: 5;
-}
-
-#particles-js canvas {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-.process1 {
-  background-image: url(../images/OurProcess2.png);
-  height: 700px;
-  width: 800px;
-  background-size: contain;
-  background-position: absolute;
-  background-repeat: no-repeat;
-}
-
-.processback {
-  background-color: #f3f4fb !important;
-  padding-top: 100px;
-}
-
-.certificate img {
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
-  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
-}
-
-.certificate {
-}
-
-/* Disable grayscale on hover */
-.certificate img:hover {
-  -webkit-filter: grayscale(0);
-  filter: none;
-}
-
-.footer1 {
-  background-color: #7c60d5;
-}
-
-/*--------------
-Iq Pproject Info
----------------*/
-.iq-project-info .media {
-  z-index: 2;
-  background: #ffffff;
-  padding: 15px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  margin-bottom: 30px;
-  position: relative;
-  top: 0;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -moz-transition: all 0.5s ease-out 0s;
-  -ms-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s;
-}
-
-.iq-project-info .media:hover {
-  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.5s ease-out 0s;
-  -moz-transition: all 0.5s ease-out 0s;
-  -ms-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s;
-}
-
-.iq-project-info .media i {
-  font-size: 40px;
-  color: #ffffff;
-  float: right;
-  background: #7c60d5;
-  line-height: 60px;
-  height: 60px;
-  width: 60px;
-  text-align: center;
-  border-radius: 100%;
-}
-
-.iq-project-info .media span {
-  font-size: 18px;
-  font-weight: normal;
-  color: #868894;
-}
-
-.iq-project-info .media:hover h5 a,
-.iq-service-info .media:hover h5 a {
-  color: #33e2a0;
-}
-
-ul.iq-project-info {
-  margin-left: -20px;
-}
-
-ul.iq-project-info li {
-  margin-bottom: 15px;
-}
-
-ul.iq-project-info li:last-child {
-  margin-bottom: 0px;
-}
-
-h3.d-inline-block.iq-fw-8 {
-  z-index: 2;
-  position: relative;
-}
-
-/*--------------------------------------------------------------
-                           Footer
---------------------------------------------------------------*/
-footer {
-  position: relative;
-  background: #46c894;
-  background: rgba(117, 205, 111, 1);
-  background: -moz-linear-gradient(
-    left,
-    rgba(117, 205, 111, 1) 0%,
-    rgba(70, 200, 148, 1) 100%
-  );
-  background: -webkit-gradient(
-    left top,
-    right top,
-    color-stop(0%, rgba(117, 205, 111, 1)),
-    color-stop(100%, rgba(70, 200, 148, 1))
-  );
-  background: -webkit-linear-gradient(
-    left,
-    rgba(117, 205, 111, 1) 0%,
-    rgba(70, 200, 148, 1) 100%
-  );
-  background: -o-linear-gradient(
-    left,
-    rgba(117, 205, 111, 1) 0%,
-    rgba(70, 200, 148, 1) 100%
-  );
-  background: -ms-linear-gradient(
-    left,
-    rgba(117, 205, 111, 1) 0%,
-    rgba(70, 200, 148, 1) 100%
-  );
-  background: linear-gradient(
-    to right,
-    rgba(117, 205, 111, 1) 0%,
-    rgba(70, 200, 148, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#75cd6f', endColorstr='#46c894', GradientType=1);
-}
-.copyright-ct {
-  padding: 10px 0;
-}
-.copyright-ct a {
-  color: #ffffff;
-}
-footer .footer-logo img {
-  height: 40px;
-}
-footer .social-icone ul {
-  margin-bottom: 0;
-}
-footer .social-icone ul li a {
-  font-size: 18px;
-  color: #ffffff;
-}
-footer .social-icone ul li {
-  padding-right: 20px;
-}
-footer .widget {
-  background: transparent;
-  border: none;
-  padding: 0;
-}
-footer .widget:before {
-  display: none;
-}
-footer #footer-menu {
-  float: right;
-  padding: 0;
-}
-footer #footer-menu li {
-  float: left;
-  display: inline-block;
-  margin-right: 30px;
-}
-footer #footer-menu li:last-child {
-  margin-right: 0;
-}
-footer #footer-menu li a {
-  color: #ffffff;
-  font-size: 18px;
-  padding: 0;
-  border: none;
-}
-footer #footer-menu li a:hover,
-footer #footer-menu li a:hover {
-  color: #333333;
-  text-decoration: none;
-}
-footer .widget ul.menu li a {
-  color: #ffffff;
-  font-size: 18px;
-  padding: 0;
-  border: none;
-}
-footer .widget ul.menu li a:hover,
-footer .social-icone ul li a:hover {
-  color: #333333;
-}
-footer .widget ul li a:before {
-  display: none;
-}
-footer .social-icone ul li:nth-last-child(1),
-footer .widget .menu li:last-child {
-  margin-right: 0;
-}
-.copyright {
-  color: #ffffff;
-}
-.copyright a {
-  color: #ffffff;
-}
-footer .footer-title {
-  color: #fff;
-}
-footer .footer-top {
-  padding-top: 60px;
-}
-
-/* Footer Two */
-footer.footer2 {
-  color: #fff;
-}
-footer.footer2 .widget {
-  margin-bottom: 30px;
-  margin-top: 0;
-}
-footer.footer2 .footer-logo {
-  margin-bottom: 15px;
-}
-footer.footer2 .footer-title {
-  color: #fff;
-  margin-bottom: 15px;
-}
-footer.footer2 .widget .menu {
-  float: left;
-}
-footer.footer2 .widget .menu li {
-  width: 100%;
-}
-footer.footer2 .mc4wp-form p {
-  margin-bottom: 0;
-}
-footer.footer2 input[type="submit"] {
-  position: absolute;
-  right: 30px;
-  bottom: 0px;
-  background: #ffffff;
-  color: #46c894;
-  padding: 11px 40px;
-}
-footer.footer2 input[type="email"] {
-  border: 1px solid #ffffff;
-  background: none;
-  width: 80%;
-  height: 48px;
-}
-footer.footer2 ul.info-share.d-inline {
-  padding-left: 0;
-}
-footer.footer2 ul.info-share li {
-  display: inline-block;
-  list-style: none;
-  padding: 0;
-  margin: 0px 5px;
-}
-footer .info-share a {
-  display: block;
-  width: 45px;
-  height: 45px;
-  line-height: 45px;
-  font-size: 16px;
-  color: #46c894;
-  background: #ffffff;
-  text-align: center;
-  border: 1px solid transparent;
-  border-radius: 50%;
-}
-footer.footer2 .info-share a:hover {
-  border: 1px solid #333333;
-  background: #333333;
-  color: #46c894;
-}
-footer.footer2 input[type="email"]::-webkit-input-placeholder {
-  color: #ffffff;
-}
-footer.footer2 input[type="email"]::-moz-placeholder {
-  color: #ffffff;
-}
-footer.footer2 input[type="email"]:-ms-input-placeholder {
-  color: #ffffff;
-}
-footer .widget {
-  margin-bottom: 45px;
-}
-footer .widget,
-footer .widget a,
-footer caption {
-  color: #ffffff;
-}
-footer .widget select {
-  border-color: #ffffff;
-}
-footer .widget .wp-caption-text {
-  color: #333333;
-}
-footer .widget ul li a {
-  color: #ffffff;
-  padding-left: 0;
-}
-footer .widget .menu li {
-  display: block;
-}
-footer .widget ul li a:hover {
-  color: #333333;
-}
-footer .widget .menu {
-  float: left;
-}
-footer .widget ul#recentcomments li a:before,
-footer .widget .rsswidget:before {
-  display: none;
-}
-footer .widget .footer-title {
-  margin-bottom: 15px;
-  padding-bottom: 0;
-  position: relative;
-  font-weight: 600;
-}
-footer .widget ul li .rsswidget {
-  padding-left: 0;
-  font-size: 16px;
-  color: #ffffff;
-  font-weight: 600;
-  display: block;
-}
-footer .widget ul li .rss-date {
-  font-weight: 600;
-  font-size: 12px;
-  text-transform: uppercase;
-  display: inline-block;
-  width: 100%;
-  margin: 5px 0;
-}
-footer .widget ul li cite {
-  font-weight: 600;
-  margin-top: 5px;
-  display: inline-block;
-  width: 100%;
-}
-footer .widget.widget_nav_menu ul li .sub-menu,
-footer .widget ul.menu li .sub-menu {
-  padding-left: 15px;
-}
-footer .widget .menu-testing-menu-container ul.menu li a {
-  font-size: 16px;
+.particles {
+    z-index: 1 !important;
 }
