--- a/style/Ico/css/style2dea.css
+++ b/style/Ico/css/style2dea.css
@@ -7028,6 +7028,7 @@ ul.progress-info {
     border-radius: 4px;
     transform: translateX(0) translateY(-8px);
     box-shadow: 0px 3px 12px 0px rgba(18, 24, 58, 0.08);
+    
   }
   .menu-sub a {
     width: 100%;
@@ -7359,4 +7360,559 @@ ul.progress-info {
   .nk-preview-content > .tab-pane {
     box-shadow: 0 5px 35px -5px rgba(18, 24, 58, 0.12);
   }
+}
+
+
+
+
+/* --- Stripe --- */
+
+
+.globalNav ul {
+  padding: 0;
+  margin: 0;
+}
+
+.globalNav li {
+  list-style: none;
+}
+
+.globalNav a {
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  color: #6772e5;
+  -webkit-transition: color 0.1s;
+  transition: color 0.1s;
+}
+.globalNav a:hover {
+  color: #32325d;
+}
+.globalNav > .container-lg {
+  padding: 0;
+}
+.globalNav .navRoot {
+  position: relative;
+}
+
+.globalNav .navSection > a,
+.globalNav .navSection > button {
+  outline: none;
+}
+.keyboard-navigation
+  .globalNav
+  .navSection
+  > a:not(.item-mobileMenu):focus
+  > :before,
+.keyboard-navigation
+  .globalNav
+  .navSection
+  > button:not(.item-mobileMenu):focus
+  > :before {
+  opacity: 0.75;
+}
+.globalNav .navSection > a:not(.item-mobileMenu) > :before,
+.globalNav .navSection > button:not(.item-mobileMenu) > :before {
+  content: "";
+  position: absolute;
+  left: -15px;
+  right: -15px;
+  top: 5px;
+  bottom: 5px;
+  -webkit-box-shadow: 0 0 0 1.5px inset currentColor;
+  box-shadow: inset 0 0 0 1.5px currentColor;
+  border-radius: 4px;
+  opacity: 0;
+  -webkit-transition: opacity 0.15s;
+  transition: opacity 0.15s;
+}
+.globalNav .navSection.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.globalNav .navSection.primary,
+.globalNav .navSection.secondary {
+  display: none;
+}
+@media (min-width: 670px) {
+  .globalNav .navSection.primary,
+  .globalNav .navSection.secondary {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+.globalNav .navSection.primary {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.globalNav .navSection.secondary {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.globalNav .navSection.mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+@media (min-width: 670px) {
+  .globalNav .navSection.mobile {
+    display: none;
+  }
+}
+.globalNav.compact .navRoot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.globalNav.compact .navSection.logo {
+  position: static;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+
+.globalNav.compact .navSection.secondary {
+  position: static;
+}
+.globalNav .rootLink {
+  display: inline-block;
+  height: 50px;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 17px;
+  line-height: 50px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0 10px;
+}
+@media (min-width: 670px) {
+  .globalNav .rootLink {
+    padding: 0 calc(-17.16247px + 4.0541vw);
+    padding: 0 calc(10px + (100vw - 670px) * 0.040541);
+  }
+}
+@media (min-width: 1040px) {
+  .globalNav .rootLink {
+    padding: 0 25px;
+  }
+}
+.globalNav .rootLink > * {
+  position: relative;
+  display: block;
+}
+.globalNav .navSection.logo .rootLink {
+  padding-left: 20px !important;
+}
+.globalNav .navSection.secondary .rootLink:last-child {
+  padding-right: 20px !important;
+}
+.globalNav .navSection.primary .rootLink {
+  font-weight: 500;
+}
+.globalNav .colorize {
+  color: #6772e5;
+  -webkit-transition: color 0.1s ease;
+  transition: color 0.1s ease;
+}
+.globalNav .colorize.active,
+.globalNav .colorize:hover {
+  color: #32325d;
+}
+.globalNav .hasDropdown {
+  cursor: default;
+}
+.globalNav .item-home h1 {
+  line-height: 50px;
+  font-size: 20px;
+  margin: 0;
+  color: inherit;
+}
+.globalNav .item-home svg {
+  vertical-align: -5px;
+}
+.globalNav .item-home svg path {
+  fill: currentColor;
+}
+.globalNav .item-dashboard > span:after {
+  font: normal 16px StripeIcons;
+  content: "\279E";
+  padding-left: 6px;
+}
+.globalNav .dropdownRoot {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  right: 0;
+  top: 50px;
+  pointer-events: none;
+  -webkit-transform: rotateX(-15deg);
+  transform: rotateX(-15deg);
+  -webkit-transform-origin: 50% -50px;
+  transform-origin: 50% -50px;
+  opacity: 0;
+  will-change: transform, opacity;
+  -webkit-transition-property: opacity, -webkit-transform;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+  transition-property: transform, opacity, -webkit-transform;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+  display: none;
+}
+
+@media (min-width: 670px) {
+  .globalNav.initialized .dropdownRoot {
+    display: block;
+  }
+}
+.globalNav.dropdownActive .dropdownRoot {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: none;
+  transform: none;
+}
+.globalNav .dropdownBackground {
+  background: #fff;
+  border-radius: 4px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 50px 100px -20px rgba(50, 50, 93, 0.25),
+    0 30px 60px -30px rgba(0, 0, 0, 0.3),
+    0 -18px 60px -10px rgba(0, 0, 0, 0.025);
+  box-shadow: 0 50px 100px -20px rgba(50, 50, 93, 0.25),
+    0 30px 60px -30px rgba(0, 0, 0, 0.3),
+    0 -18px 60px -10px rgba(0, 0, 0, 0.025);
+  width: 380px;
+  height: 400px;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+}
+.globalNav .alternateBackground,
+.globalNav .dropdownBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  will-change: transform;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+}
+.globalNav .alternateBackground {
+  right: 0;
+  height: 1000px;
+  background: #f6f9fc;
+}
+.globalNav .dropdownArrow {
+  top: -6px;
+  margin: 0 0 0 -6px;
+  width: 12px;
+  height: 12px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  border-radius: 4px 0 0 0;
+  background: #fff;
+  -webkit-box-shadow: -3px -3px 5px rgba(82, 95, 127, 0.04);
+  box-shadow: -3px -3px 5px rgba(82, 95, 127, 0.04);
+  will-change: transform;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+}
+.globalNav .dropdownArrow,
+.globalNav .dropdownContainer {
+  position: absolute;
+  left: 0;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+}
+.globalNav .dropdownContainer {
+  overflow: hidden;
+  width: 500px;
+  top: 0;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  will-change: transform, width, height;
+  -webkit-transition-property: width, height, -webkit-transform;
+  transition-property: width, height, -webkit-transform;
+  transition-property: transform, width, height;
+  transition-property: transform, width, height, -webkit-transform;
+}
+.globalNav .dropdownSection {
+  opacity: 0;
+  pointer-events: none;
+  will-change: transform, opacity;
+  -webkit-transition-property: opacity, -webkit-transform;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+  transition-property: transform, opacity, -webkit-transform;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+  background: red;
+}
+
+.globalNav .dropdownSection.active {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+.globalNav .dropdownSection.left {
+  -webkit-transform: translateX(-150px);
+  transform: translateX(-150px);
+}
+.globalNav .dropdownSection.right {
+  -webkit-transform: translateX(150px);
+  transform: translateX(150px);
+}
+.globalNav.dropdownActive .dropdownSection.active {
+  pointer-events: auto;
+}
+.globalNav.noDropdownTransition .alternateBackground,
+.globalNav.noDropdownTransition .dropdownArrow,
+.globalNav.noDropdownTransition .dropdownBackground,
+.globalNav.noDropdownTransition .dropdownContainer,
+.globalNav.noDropdownTransition .dropdownSection {
+  -webkit-transition: none;
+  transition: none;
+}
+.globalNav .dropdownContent {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.globalNav .linkGroup {
+  padding: 20px 35px;
+}
+.globalNav .linkContainer {
+  display: block;
+  padding: 9px 0;
+  outline: none;
+  position: relative;
+}
+.keyboard-navigation .globalNav .linkContainer:focus:before {
+  opacity: 0.5;
+}
+.globalNav .linkContainer:before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  top: 0;
+  right: -10px;
+  bottom: 0;
+  -webkit-box-shadow: 0 0 0 1.5px #8898aa;
+  box-shadow: 0 0 0 1.5px #8898aa;
+  border-radius: 4px;
+  opacity: 0;
+  -webkit-transition: opacity 0.15s;
+  transition: opacity 0.15s;
+}
+
+.globalNav .linkTitle {
+  margin: 0;
+  color: #6772e5;
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.025em;
+}
+.globalNav .linkSub {
+  font-size: 15px;
+  line-height: 22px;
+  color: #6b7c93;
+  margin: 5px 0 0;
+  display: block;
+  white-space: nowrap;
+}
+.globalNav .linkSub,
+.globalNav .linkTitle {
+  -webkit-transition: color 0.1s;
+  transition: color 0.1s;
+}
+.globalNav .linkContainer:focus .linkTitle,
+.globalNav .linkContainer:hover .linkTitle,
+.globalNav .linkTitle:focus,
+.globalNav .linkTitle:hover {
+  color: #32325d;
+}
+.globalNav .linkContainer:focus .linkSub,
+.globalNav .linkContainer:hover .linkSub {
+  color: #424770;
+}
+.globalNav .hover-fillDark,
+.globalNav .hover-fillLight {
+  -webkit-transition: fill 0.1s;
+  transition: fill 0.1s;
+}
+.globalNav .hover-strokeDark,
+.globalNav .hover-strokeLight {
+  -webkit-transition: stroke 0.1s;
+  transition: stroke 0.1s;
+}
+.globalNav .linkContainer:focus .hover-fillLight,
+.globalNav .linkContainer:hover .hover-fillLight {
+  fill: #8898aa;
+}
+.globalNav .linkContainer:focus .hover-fillDark,
+.globalNav .linkContainer:hover .hover-fillDark {
+  fill: #32325d;
+}
+.globalNav .linkContainer:focus .hover-strokeLight,
+.globalNav .linkContainer:hover .hover-strokeLight {
+  stroke: #8898aa;
+}
+.globalNav .linkContainer:focus .hover-strokeDark,
+.globalNav .linkContainer:hover .hover-strokeDark {
+  stroke: #32325d;
+}
+.globalNav .linkIcon {
+  white-space: nowrap;
+}
+.globalNav .linkIcon svg {
+  margin: 0 12px -3px -1px;
+}
+.globalNav .withIcon {
+  padding-left: 28px;
+}
+.globalNav .withIcon .linkTitle {
+  margin-left: -28px;
+}
+.globalNav .new-badge {
+  display: inline-block;
+  margin-left: 5px;
+  vertical-align: 2px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 10px;
+  line-height: 1;
+  font-weight: 700;
+  background: #6772e5;
+  -webkit-transition: background 0.15s;
+  transition: background 0.15s;
+  border-radius: 10px;
+  padding: 2px 4px 1px;
+  height: auto;
+  top: auto;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.globalNav .linkContainer:focus .new-badge,
+.globalNav .linkContainer:hover .new-badge {
+  background: #32325d;
+}
+.globalNav .productsGroupPrimary,
+.globalNav .productsGroupSecondary {
+  margin: -5px -10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.globalNav .productsGroupPrimary > li,
+.globalNav .productsGroupSecondary > li {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.globalNav .productsGroupPrimary .linkContainer,
+.globalNav .productsGroupSecondary .linkContainer {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.globalNav .productsGroupPrimary .linkContainer {
+  padding: 16px 8px;
+}
+.globalNav .productsGroupPrimary svg {
+  width: 48px;
+  height: 48px;
+}
+.globalNav .productsGroupPrimary .productLinkContent {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin-left: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.globalNav .productsGroupSecondary .linkContainer {
+  padding: 14px 8px 14px 12px;
+}
+.globalNav .productsGroupSecondary svg {
+  width: 22px;
+  height: 22px;
+}
+.globalNav .productsGroupSecondary .productLinkContent {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin-left: 15px;
+}
+
+.globalNav .productsGroupSecondary .linkTitle {
+  display: inline;
+}
+.globalNav .productsGroupSecondary .linkSub {
+  display: inline;
+  margin: 0 0 0 10px;
+}
+
+.globalNav .prodsubGroup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-top: 2px solid #fff;
+}
+
+.globalNav .prodsubGroup .linkContainer {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  padding: 13px 26px;
+}
+
+.globalNav .prodsubGroup .linkSub {
+  margin: 0 0 0 10px;
 }
